@@ -1,1 +1,5 @@
-test changelog
+1. Enable the server to listen for incoming WebSocket connections
+2. If the server find that the first request is not a HTTP GET, it will fallback to vanilla TCP.
+3. With this mod installed, a client can connect to a WebSocket-enabled server using a WebSocket URI, e.g. `ws://hostname:port/endpoint'
+4. The server ignores the endpoint in the URI.
+5. Clients can still connect to vanilla TCP servers using `hostname:port`
